@@ -494,7 +494,7 @@ class EventCalendarTest extends MediaWikiIntegrationTestCase {
 		yield 'calendar with extra braces in titleRegex that has both start and end date' => [
 			[
 				'Cat Event 1 2022/04/20:2022/04/29' => 'Event 1',
-				'Ferret Event 2 2022/05/5:2022/04/7' => 'Event 2',
+				'Ferret Event 2 2022/05/05:2022/04/07' => 'Event 2',
 				'Dog Event 3 2022/05/10:2022/05/15' => 'Event 3',
 				'Cat Event 4 2022/05/25:2022/05/27' => 'Event 4'
 			],
@@ -519,6 +519,38 @@ class EventCalendarTest extends MediaWikiIntegrationTestCase {
 					'start' => '2022-05-10',
 					'end' => '2022-05-15',
 					'url' => '/wiki/Dog_Event_3_2022/05/10:2022/05/15'
+				]
+			]
+		];
+
+		yield 'calendar that uses (?<start>something) and (?<end>something) syntax in titleRegex' => [
+			[
+				'Cat Event 1 2022/04/29//2022/04/20' => 'Event 1',
+				'Ferret Event 2 2022/05/07//2022/04/05' => 'Event 2',
+				'Dog Event 3 2022/05/15//2022/05/10' => 'Event 3',
+				'Cat Event 4 2022/05/27//2022/05/25' => 'Event 4'
+			],
+			'titleRegex = ^(Cat|Dog)_Event.*?(?<end>[0-9]{4,4}/[0-9][0-9]/[0-9][0-9])//' .
+				"(?<start>[0-9]{4,4}/[0-9][0-9]/[0-9][0-9])$\n" .
+				'dateFormat = Y/m/d',
+			[
+				[
+					'title' => 'Cat Event 1',
+					'start' => '2022-04-20',
+					'end' => '2022-04-29',
+					'url' => '/wiki/Cat_Event_1_2022/04/29//2022/04/20'
+				],
+				[
+					'title' => 'Cat Event 4',
+					'start' => '2022-05-25',
+					'end' => '2022-05-27',
+					'url' => '/wiki/Cat_Event_4_2022/05/27//2022/05/25'
+				],
+				[
+					'title' => 'Dog Event 3',
+					'start' => '2022-05-10',
+					'end' => '2022-05-15',
+					'url' => '/wiki/Dog_Event_3_2022/05/15//2022/05/10'
 				]
 			]
 		];
